--- a/package.json
+++ b/package.json
@@ -4,40 +4,43 @@
     "private": true,
     "main": "src/index-module.tsx",
     "dependencies": {
-        "@emotion/react": "^11.9.3",
-        "@emotion/styled": "^11.9.3",
-        "@mui/base": "^5.0.0-alpha.97",
-        "@mui/material": "^5.10.5",
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
+        "@mui/base": "^5.0.0-alpha.102",
+        "@mui/material": "^5.10.10",
+        "@types/react-gtm-module": "^2.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-ga": "^3.3.1",
         "react-helmet": "^6.1.0",
-        "react-scripts": "5.0.0",
-        "styled-components": "^5.3.3",
-        "typescript": "^4.8.3"
+        "react-scripts": "^5.0.1",
+        "styled-components": "^5.3.6"
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "^5.16.1",
-        "@testing-library/react": "^12.1.2",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.0.3",
-        "@types/node": "^16.11.13",
-        "@types/react": "^18.0.20",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/jest": "^29.2.0",
+        "@types/node": "^18.11.3",
+        "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
         "@types/react-helmet": "^6.1.5",
-        "@types/styled-components": "^5.1.19",
-        "@typescript-eslint/eslint-plugin": "^5.7.0",
-        "@typescript-eslint/parser": "^5.7.0",
-        "eslint": "8.22.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.27.1",
-        "jest": "^27.4.5",
-        "prettier": "^2.5.1",
-        "ts-jest": "^27.1.1"
+        "@types/styled-components": "^5.1.26",
+        "@typescript-eslint/eslint-plugin": "^5.40.1",
+        "@typescript-eslint/parser": "^5.40.1",
+        "eslint": "8.26.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.10",
+        "jest": "^29.2.1",
+        "prettier": "^2.7.1",
+        "ts-jest": "^29.0.3",
+        "typescript": "^4.8.4"
     },
     "scripts": {
         "dev": "react-scripts start",
-        "dev-build": "react-scripts build"
+        "build": "react-scripts build",
+        "deploy-s3": "aws s3 sync --profile personal build/ s3://charlenvisualizer.com"
     },
     "eslintConfig": {
         "extends": [
